--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ant-design/icons": "^5.0.0",
+    "antd": "^5.1.5",
+    "axios": "^1.2.3",
+    "ethers": "^5.7.2",
+    "react-router-dom": "^6.6.2",
+    "wagmi": "^0.10.11"
+
   },
   "scripts": {
     "start": "react-scripts start",
