--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.1",
+    "styled-system": "^5.1.5",
     "use-debounce": "^9.0.4",
     "wagmi": "^0.10.11",
     "web-vitals": "^2.1.4"
