--- a/.github/workflows/deploy-tst.yml
+++ b/.github/workflows/deploy-tst.yml
@@ -15,15 +15,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: deploy
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'pnpm'
     - run: npm i -g pnpm
     - run: pnpm install
     - run: pnpm sst:deploy
