--- a/.github/workflows/deploy-tst.yml
+++ b/.github/workflows/deploy-tst.yml
@@ -15,43 +15,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: configure AWS Credentials
+    - name: configure credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-central-1
+        aws-region: eu-west-1
     - name: checkout
       uses: actions/checkout@v3
 
-    - name: install Node.js
+    - name: setup
       uses: actions/setup-node@v3
       with:
-        node-version: 16
-
-    - uses: pnpm/action-setup@v2
-      name: install pnpm
-      id: pnpm-install
-      with:
-        version: 7
-        run_install: false
-
-    - name: get pnpm store directory
-      id: pnpm-cache
-      shell: bash
-      run: |
-        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-    - uses: actions/cache@v3
-      name: setup pnpm cache
-      with:
-        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-pnpm-store-
-
-    - name: Install dependencies
-      run: pnpm install
+        node-version: '16'
+        cache: 'yarn'
+    
+    - name: install
+      run: yarn
 
     - name: deploy
       run: pnpm sst:deploy
