--- a/.github/workflows/deploy-tst.yml
+++ b/.github/workflows/deploy-tst.yml
@@ -15,23 +15,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: configure credentials
+    - name: Configure credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-west-1
-    - name: checkout
+    
+    - name: Checkout
       uses: actions/checkout@v3
 
-    - name: setup
+    - name: Set up node
       uses: actions/setup-node@v3
       with:
         node-version: '16'
         cache: 'yarn'
     
-    - name: install
+    - name: Install
       run: yarn
 
-    - name: deploy
-      run: pnpm sst:deploy
+    - name: Deploy
+      run: yarn sst:deploy
