--- a/.github/workflows/deploy-tst.yml
+++ b/.github/workflows/deploy-tst.yml
@@ -4,8 +4,10 @@
 name: Deploy Test
 
 on:
-  pull_request:
-    branches: [ "develop" ]
+  push:
+    branches:
+      - master
+      - develop
 
 jobs:
   build:
