add prod deploy

--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Deploy Test
+name: Deploy Prod
 
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-1
+        aws-region: eu-central-1
     
     - name: Checkout
       uses: actions/checkout@v3
@@ -34,6 +34,6 @@ jobs:
       run: yarn
 
     - name: Deploy
-      run: yarn sst:deploy
+      run: yarn sst:prd:deploy
       env:
         CI: false
