--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eject": "react-scripts eject",
     "sst:build": "sst build",
     "sst:deploy": "sst deploy --stage tst --region eu-west-1",
-    "sst:remove": "sst remove --stage tst --region eu-west-1"
+    "sst:remove": "sst remove --stage tst --region eu-west-1",
+    "sst:prd:deploy": "sst deploy --stage prd --region eu-central-1"
   },
   "eslintConfig": {
     "extends": [
