--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "satoshilira-frontend",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.0",
@@ -20,11 +20,12 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "sst": "^2.8.24",
+    "@tsconfig/node16": "^1.0.4",
     "aws-cdk-lib": "2.72.1",
     "constructs": "10.1.156",
-    "typescript": "^5.0.4",
-    "@tsconfig/node16": "^1.0.4"
+    "sst": "^2.8.24",
+    "standard-version": "^9.5.0",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
